@@ -78,7 +78,11 @@ class PageHandler(RequestHandler):
             raise Forbidden
         title = title.replace('_', ' ')
         page = model.WikiContent.get_by_title(title)
-        self.reply(view.view_page(page, user=users.get_current_user(), is_admin=users.is_current_user_admin()), 'text/html')
+
+        if self.request.get("format") == "raw":
+            self.reply(page.get_raw_body(), content_type="text/plain")
+        else:
+            self.reply(view.view_page(page, user=users.get_current_user(), is_admin=users.is_current_user_admin()), 'text/html')
 
 
 class StartPageHandler(PageHandler):
